# neurokernel

./: ._MorrisLecar.py  ._Network.py  ._VectorSynapse.py  ._cuda.py  ._euler_kernel.cu  ._euler_kernel1.cu  ._input_func.cu  ._lamina  ._lev.py  ._main.py  ._morris_lecar.py  ._neuralnet.py  ._parray.py  ._terminal_synapse.cu  ._yiyin  .gitignore  .project  AUTHORS  AUTHORS.rst  CHANGES.rst  INSTALL  INSTALL.rst  LICENSE  LICENSE.rst  MANIFEST.in  Manager.py  Module.py  MorrisLecar.py  Network.py  README  README.rst  VectorSynapse.py  broker.py  broker_ctrl.py  broker_ctrl_route.py  check_cuda_version.py  connectivity.py  ctrl_proc.py  ctx_managers.py  demo.py  (+23 more)
Mock/: MockNetwork.py  MorrisLecar.py  VectorSynapse.py
docs/: Makefile
example/: V1.h5  V4.h5  initn.h5  n_dendrites.h5  pre.h5  reverse.h5  start_idx.h5  threshold.h5
lamina/: ._T.h5  ._V1.h5  ._V2.h5  ._V3.h5  ._V4.h5  ._delay.h5  ._initV.h5  ._initn.h5  ._n_dendrites.h5  ._offset.h5  ._post.h5  ._power.h5  ._pre.h5  ._reverse.h5  ._saturation.h5  ._slope.h5  ._start_idx.h5  ._threshold.h5  V3.h5  offset.h5  post.h5  saturation.h5  slope.h5
neurokernel/: Connectivity.py  Manager.py  Module.py  __init__.py  all_global_vars.py  allglobalvars.py  base.py  base_gpu.py  base_gpu_onesided.py  conn.py  conn_utils.py  core.py  core_gpu.py  core_gpu_onesided.py  coreprof.py  ctrl_proc.py  ctx_managers.py  mixins.py  mpi.py  mpi_backend.py  mpi_proc.py  mpi_relaunch.py  mpi_run.py  pattern.py  plsel.py  pm.py  pm_gpu.py  routing_table.py  stats.py  uid.py  version.py
nk/: __init__.py
notebooks/: JetsonTK1.ipynb  Lamina.ipynb  ec2.ipynb  generic.ipynb  intro.ipynb  (+9 more)
(+245 files in other folders)
