[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurokernel"
version = "0.3.1"
description = "An open architecture for Drosophila brain emulation"
license = { text = "BSD" }
authors = [{ name = "Neurokernel Development Team", email = "neurokernel-dev@columbia.edu" }]
maintainers = [{ name = "Neurokernel Development Team", email = "neurokernel-dev@columbia.edu" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development"
]
dependencies = [
  "bidict>=0.11.0",
  "dill>=0.2.4,<=0.3.3",
  "future>=0.16.0",
  "h5py>=2.8.0",
  "lxml>=3.3.0",
  "markupsafe>=0.23",
  "matplotlib>=1.4.3",
  "mpi4py>=1.3.1",
  "networkx>=2.4",
  "numexpr>=2.3",
  "numpy>=1.9.2",
  "pandas>=1.0.0",
  "ply>=3.4",
  "psutil>=2.2.1",
  "pycuda>=2020.1",
  "scipy>=0.11.0",
  "shutilwhich>=1.1.0",
  "twiggy>=0.4.7",
  "tqdm",
  "futures; python_version == '2.7'"
]

[project.optional-dependencies]
sphinx = ["sphinx>=1.3"]
sphinx_rtd_theme = ["sphinx_rtd_theme>=0.1.6"]

[project.urls]
Homepage = "https://github.com/neurokernel/neurokernel/"
Download = "https://github.com/neurokernel/neurokernel/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["neurokernel*"]
